tests/NormalTests/paczka1/fuzzy1/79160256.err
Error in line 3: ZVj2Cam6ayO A840 94,99
Error in line 7: ZVj2Cam6ayO A840 262,9
Error in line 5: je47L A840 93,5
Error in line 24: sXIla3XU80f S383 30,5
